<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/app_title"
        android:textSize="30sp"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:gravity="center">
    </TextView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:text="@string/notes"
        android:onClick="notes">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:text="@string/expenses"
        android:onClick="expenses">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:text="@string/tasks"
        android:onClick="tasks">
    </Button>
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textColor="#fff"
        android:text="@string/my_profile"
        android:onClick="profile">
    </Button>

</LinearLayout>
