<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="Edit Profile"
        android:textSize="30sp"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:gravity="center">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/your_name"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:padding="10dp">
    </TextView>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="John Zena"
        android:textSize="25sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/your_email"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:padding="10dp">
    </TextView>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="Johnzena@gmail.com"
        android:textSize="25sp">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/your_mobile"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:padding="10dp">
    </TextView>
    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="0711234567"
        android:textSize="25sp">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="CLEAR"
            android:textSize="25sp"
            android:onClick="clear">
        </Button>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="SAVE"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:textSize="25sp"
            android:onClick="save">
        </Button>
    </LinearLayout>

</LinearLayout>